Fix horizontal scroll fitting

--- a/public/css/dialog.css
+++ b/public/css/dialog.css
@@ -17,5 +17,6 @@
 
 #quokka #quokka_frame {
   height: 400px;
+  width: 100%;
   border: 0;
 }
